# PowerPointKaraoke

./: LICENSE  README.md  README_MultiLevel.md  aistudio.md  create_presentation.py  example.env  ideas.md  image_prompts.json  index.html  package-lock.json  package.json  prompt.md  pyproject.toml  replace_images.py  requirements.txt
.github/workflows/: deploy-pages.yml
decks/als-frau-im-mittelalter-ueberlebenstipps-image-first/: index.html  meta.json
decks/buehnen-boesewicht-fuer-fortgeschrittene/: index.html  meta.json
decks/timmy-wal-sprengen-satire/: index.html  (+1 more)
docs/: deck-spec.md  generation-workflow.md  image-first-conversion-manifest.md  image-first-karaoke-decks.md
p1/: index.html  p1.md
p10/: index.html  p10.md
p11/: index.html  p11.md
p12/: index.html  p12.md
p13/: index.html  p13.md
p14/: index.html  p14.md
p15/: index.html  p15.md
p16/: index.html  p16.md
p17/: content_structure.json  index.html  p17.md
p18/: content_structure.json  index.html  p18.md
p19/: content_structure.json  index.html  p19.md
p2/: index.html  p2.md
p20/: content_structure.json  index.html  p20.md
p21/: content_structure.json  index.html  p21.md
p22/: content_structure.json  index.html  p22.md
p23/: content_structure.json  index.html  p23.md
p24/: content_structure.json  index.html  p24.md
p25/: index.html
p26/: index.html
p3/: index.html  p3.md
p4/: index.html  p4.md
p5/: index.html  p5.md
p6/: index.html  p6.md
p7/: index.html  p7.md
p8/: index.html  p8.md
p9/: index.html  p9.md
scripts/: build-gallery.js  validate-decks.js
(+28 files in other folders)
